# InductivelyCoupledPlasma

./: CMakeLists.txt  README.md  config.cmake  parameters
Grids/: Mesh_wo_coils_rectangle.geo
SRC/: Build_initial_condition.f90  compile.f90  csr.f90  find_elem.f90  getEcoil.f90  getStiffness.f90  gmsh_operations.f90  handling_parameters.f90  init.f90  inout.f90  io.c  main.f90  mem_allocate.f90  mesh2nodal.c  module_icp.f90  onmetis.c  partitioner.f90  partnmesh.c  pmetis.c  postpro.f90  sendall.f90  setBC.f90  smbfactor.c  solving.f90
